<resources>
    <string name="app_name">Food Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Log In</string>
    <string name="DoyouWRegister">Do You Want To</string>
    <string name="Register">Register ?</string>
    <string name="foodPlanner">Food\nPlanner</string>
    <string name="plan">Food Plan</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="foodPlan">Food Plan</string>
    <string name="addToplan">Add To Plan</string>
    <string name="addtofav">Favorite</string>
    <string name="register">Register</string>
    <string name="google">Google</string>
    <string name="google_id_from">1026804517930-hrrjr2rkloc5ata9lpvqgf80ug8nnb0n</string>
    <string name="meal">Meal</string>
    <string name="Favorite">Favorite</string>
    <string name="removeFromPlan">Remove From Plan</string>
    <string name="Area">Area</string>
    <string name="Ingredient">Ingredient</string>
    <string name="MealName">Meal Name</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="guest">Guest\n</string>

</resources>